src/api/java5/jna-dds/dds2tmptmp.h


typedef enum dds_sample_state
{
  DDS_SST_READ = DDS_READ_SAMPLE_STATE,
  DDS_SST_NOT_READ = DDS_NOT_READ_SAMPLE_STATE
}
dds_sample_state_t;
typedef enum dds_view_state
{
  DDS_VST_NEW = DDS_NEW_VIEW_STATE,
  DDS_VST_OLD = DDS_NOT_NEW_VIEW_STATE
}
dds_view_state_t;
typedef enum dds_instance_state
{
  DDS_IST_ALIVE = DDS_ALIVE_INSTANCE_STATE,
  DDS_IST_NOT_ALIVE_DISPOSED = DDS_NOT_ALIVE_DISPOSED_INSTANCE_STATE,
  DDS_IST_NOT_ALIVE_NO_WRITERS = DDS_NOT_ALIVE_NO_WRITERS_INSTANCE_STATE
}
dds_instance_state_t;
typedef struct dds_sample_info
{
  dds_sample_state_t sample_state;
  dds_view_state_t view_state;
  dds_instance_state_t instance_state;
  bool valid_data;
  dds_time_t source_timestamp;
  dds_instance_handle_t instance_handle;
  dds_instance_handle_t publication_handle;
  uint32_t disposed_generation_count;
  uint32_t no_writers_generation_count;
  uint32_t sample_rank;
  uint32_t generation_rank;
  uint32_t absolute_generation_rank;
  dds_time_t reception_timestamp; 
}
dds_sample_info_t;
 dds_return_t
dds_write(
        dds_entity_t writer,
        const void *data);
 dds_return_t
dds_writecdr(
        dds_entity_t writer,
        const void *cdr,
        size_t size);
 dds_return_t
dds_write_ts(
        dds_entity_t writer,
        const void *data,
        dds_time_t timestamp);
  dds_entity_t
dds_create_readcondition(
         dds_entity_t reader,
         uint32_t mask);
typedef bool (*dds_querycondition_filter_fn) (const void * sample);
 dds_entity_t
dds_create_querycondition(
         dds_entity_t reader,
         uint32_t mask,
         dds_querycondition_filter_fn filter);
typedef void * dds_attach_t;
  dds_entity_t
dds_create_waitset(
         dds_entity_t participant);
 dds_return_t
dds_waitset_get_entities(
         dds_entity_t waitset,
         dds_entity_t *entities,
         size_t size);
 dds_return_t
dds_waitset_attach(
         dds_entity_t waitset,
         dds_entity_t entity,
         dds_attach_t x);
 dds_return_t
dds_waitset_detach(
         dds_entity_t waitset,
         dds_entity_t entity);
 dds_return_t
dds_waitset_set_trigger(
         dds_entity_t waitset,
         bool trigger);
 dds_return_t
dds_waitset_wait(
         dds_entity_t waitset,
         dds_attach_t *xs,
         size_t nxs,
         dds_duration_t reltimeout);
struct serdata;
 int
dds_takecdr(
        dds_entity_t reader_or_condition,
        struct serdata **buf,
        uint32_t maxs,
        dds_sample_info_t *si,
        uint32_t mask);
 dds_return_t
dds_triggered(
         dds_entity_t entity);