src/api/java5/jna-dds/src/main/java/org/eclipse/cyclonedds/ddsc/DdscLibrary.java

	/**
	 * @brief Write the value of a data instance<br>
	 * With this API, the value of the source timestamp is automatically made<br>
	 * available to the data reader by the service.<br>
	 * @param[in]  writer The writer entity<br>
	 * @param[in]  data Value to be written<br>
	 * @returns - dds_return_t indicating success or failure<br>
	 * Original signature : <code>dds_return_t dds_write(dds_entity_t, const void*)</code><br>
	 * <i>native declaration : dds2tmptmp.h:1022</i>
	 */
	public static native DdscLibrary.dds_return_t dds_write(DdscLibrary.dds_entity_t writer, Pointer data);
	/**
	 * @brief Write a CDR serialized value of a data instance<br>
	 * Untyped API, which take serialized blobs now.<br>
	 * Whether they remain exposed like this with X-types isn't entirely clear yet.<br>
	 * TODO: make a decide about dds_takecdr<br>
	 * @param[in]  writer The writer entity<br>
	 * @param[in]  cdr CDR serialized value to be written<br>
	 * @param[in]  size Size (in bytes) of CDR encoded data to be written<br>
	 * @returns - A dds_return_t indicating success or failure<br>
	 * Original signature : <code>dds_return_t dds_writecdr(dds_entity_t, const void*, size_t)</code><br>
	 * <i>native declaration : dds2tmptmp.h:1034</i>
	 */
	public static native DdscLibrary.dds_return_t dds_writecdr(DdscLibrary.dds_entity_t writer, Pointer cdr, NativeSize size);
	/**
	 * @brief Write the value of a data instance along with the source timestamp passed.<br>
	 * @param[in]  writer The writer entity<br>
	 * @param[in]  data Value to be written<br>
	 * @param[in]  timestamp Source timestamp<br>
	 * @returns - A dds_return_t indicating success or failure<br>
	 * Original signature : <code>dds_return_t dds_write_ts(dds_entity_t, const void*, dds_time_t)</code><br>
	 * <i>native declaration : dds2tmptmp.h:1043</i>
	 */
	public static native DdscLibrary.dds_return_t dds_write_ts(DdscLibrary.dds_entity_t writer, Pointer data, DdscLibrary.dds_time_t timestamp);
	/**
	 * @brief Creates a readcondition associated to the given reader.<br>
	 * The readcondition allows specifying which samples are of interest in<br>
	 * a data reader's history, by means of a mask. The mask is or'd with<br>
	 * the flags that are dds_sample_state_t, dds_view_state_t and<br>
	 * dds_instance_state_t.<br>
	 * Based on the mask value set, the readcondition gets triggered when<br>
	 * data is available on the reader.<br>
	 * Waitsets allow waiting for an event on some of any set of entities.<br>
	 * This means that the readcondition can be used to wake up a waitset when<br>
	 * data is in the reader history with states that matches the given mask.<br>
	 * @note The parent reader and every of its associated conditions (whether<br>
	 *       they are readconditions or queryconditions) share the same resources.<br>
	 *       This means that one of these entities reads or takes data, the states<br>
	 *       of the data will change for other entities automatically. For instance,<br>
	 *       if one reads a sample, then the sample state will become 'read' for all<br>
	 *       associated reader/conditions. Or if one takes a sample, then it's not<br>
	 *       available to any other associated reader/condition.<br>
	 * @param[in]  reader  Reader to associate the condition to.<br>
	 * @param[in]  mask    Interest (dds_sample_state_t|dds_view_state_t|dds_instance_state_t).<br>
	 * @returns >0 - Success (valid condition).<br>
	 * @returns <0 - Failure (use dds_err_nr() to get error value).<br>
	 * @retval DDS_RETCODE_ERROR<br>
	 *                  An internal error has occurred.<br>
	 * @retval DDS_RETCODE_ILLEGAL_OPERATION<br>
	 *                  The operation is invoked on an inappropriate object.<br>
	 * @retval DDS_RETCODE_ALREADY_DELETED<br>
	 *                  The entity has already been deleted.<br>
	 * Original signature : <code>dds_entity_t dds_create_readcondition(dds_entity_t, uint32_t)</code><br>
	 * <i>native declaration : dds2tmptmp.h:1074</i>
	 */
	public static native DdscLibrary.dds_entity_t dds_create_readcondition(DdscLibrary.dds_entity_t reader, int mask);
	/**
	 * Original signature : <code>dds_entity_t dds_create_querycondition(dds_entity_t, uint32_t, dds_querycondition_filter_fn)</code><br>
	 * <i>native declaration : dds2tmptmp.h:1111</i>
	 */
	public static native DdscLibrary.dds_entity_t dds_create_querycondition(DdscLibrary.dds_entity_t reader, int mask, DdscLibrary.dds_querycondition_filter_fn filter);
	/**
	 * @brief Create a waitset and allocate the resources required<br>
	 * A WaitSet object allows an application to wait until one or more of the<br>
	 * conditions of the attached entities evaluates to TRUE or until the timeout<br>
	 * expires.<br>
	 * @param[in]  participant  Domain participant which the WaitSet contains.<br>
	 * @returns >0 - Success (valid waitset).<br>
	 * @returns <0 - Failure (use dds_err_nr() to get error value).<br>
	 * @retval DDS_RETCODE_ERROR<br>
	 *                  An internal error has occurred.<br>
	 * @retval DDS_RETCODE_ILLEGAL_OPERATION<br>
	 *                  The operation is invoked on an inappropriate object.<br>
	 * @retval DDS_RETCODE_ALREADY_DELETED<br>
	 *                  The entity has already been deleted.<br>
	 * Original signature : <code>dds_entity_t dds_create_waitset(dds_entity_t)</code><br>
	 * <i>native declaration : dds2tmptmp.h:1136</i>
	 */
	public static native DdscLibrary.dds_entity_t dds_create_waitset(DdscLibrary.dds_entity_t participant);
	/**
	 * @brief Acquire previously attached entities.<br>
	 * This functions takes a pre-allocated list to put the entities in and<br>
	 * will return the number of found entities. It is possible that the given<br>
	 * size of the list is not the same as the number of found entities. If<br>
	 * less entities are found, then the last few entries in the list are<br>
	 * untouched. When more entities are found, then only 'size' number of<br>
	 * entries are inserted into the list, but still the complete count of the<br>
	 * found entities is returned. Which entities are returned in the latter<br>
	 * case is undefined.<br>
	 * @param[in]  waitset  Waitset from which to get its attached entities.<br>
	 * @param[out] entities Pre-allocated array to contain the found entities.<br>
	 * @param[in]  size     Size of the pre-allocated entities' list.<br>
	 * @returns >=0 - Success (number of found children, can be larger than 'size').<br>
	 * @returns  <0 - Failure (use dds_err_nr() to get error value).<br>
	 * @retval DDS_RETCODE_ERROR<br>
	 *                  An internal error has occurred.<br>
	 * @retval DDS_RETCODE_BAD_PARAMETER<br>
	 *                  The entities parameter is NULL, while a size is provided.<br>
	 * @retval DDS_RETCODE_ILLEGAL_OPERATION<br>
	 *                  The operation is invoked on an inappropriate object.<br>
	 * @retval DDS_RETCODE_ALREADY_DELETED<br>
	 *                  The waitset has already been deleted.<br>
	 * Original signature : <code>dds_return_t dds_waitset_get_entities(dds_entity_t, dds_entity_t*, size_t)</code><br>
	 * <i>native declaration : dds2tmptmp.h:1162</i>
	 */
	public static native DdscLibrary.dds_return_t dds_waitset_get_entities(DdscLibrary.dds_entity_t waitset, DdscLibrary.dds_entity_t entities, NativeSize size);
	/**
	 * @brief This operation attaches an Entity to the WaitSet.<br>
	 * This operation attaches an Entity to the WaitSet. The dds_waitset_wait()<br>
	 * will block when none of the attached entities are triggered. 'Triggered'<br>
	 * (dds_triggered()) doesn't mean the same for every entity:<br>
	 *  - Reader/Writer/Publisher/Subscriber/Topic/Participant<br>
	 *      - These are triggered when their status changed.<br>
	 *  - WaitSet<br>
	 *      - Triggered when trigger value was set to true by the application.<br>
	 *        It stays triggered until application sets the trigger value to<br>
	 *        false (dds_waitset_set_trigger()). This can be used to wake up an<br>
	 *        waitset for different reasons (f.i. termination) than the 'normal'<br>
	 *        status change (like new data).<br>
	 *  - ReadCondition/QueryCondition<br>
	 *      - Triggered when data is available on the related Reader that matches<br>
	 *        the Condition.<br>
	 * Multiple entities can be attached to a single waitset. A particular entity<br>
	 * can be attached to multiple waitsets. However, a particular entity can not<br>
	 * be attached to a particular waitset multiple times.<br>
	 * @param[in]  waitset  The waitset to attach the given entity to.<br>
	 * @param[in]  entity   The entity to attach.<br>
	 * @param[in]  x        Blob that will be supplied when the waitset wait is<br>
	 *                      triggerd by the given entity.<br>
	 * @returns   0 - Success (entity attached).<br>
	 * @returns  <0 - Failure (use dds_err_nr() to get error value).<br>
	 * @retval DDS_RETCODE_ERROR<br>
	 *                  An internal error has occurred.<br>
	 * @retval DDS_RETCODE_BAD_PARAMETER<br>
	 *                  The given waitset or entity are not valid.<br>
	 * @retval DDS_RETCODE_ILLEGAL_OPERATION<br>
	 *                  The operation is invoked on an inappropriate object.<br>
	 * @retval DDS_RETCODE_ALREADY_DELETED<br>
	 *                  The waitset has already been deleted.<br>
	 * @retval DDS_RETCODE_PRECONDITION_NOT_MET<br>
	 *                  The entity was already attached.<br>
	 * Original signature : <code>dds_return_t dds_waitset_attach(dds_entity_t, dds_entity_t, dds_attach_t)</code><br>
	 * <i>native declaration : dds2tmptmp.h:1200</i>
	 */
	public static native DdscLibrary.dds_return_t dds_waitset_attach(DdscLibrary.dds_entity_t waitset, DdscLibrary.dds_entity_t entity, Pointer x);
	/**
	 * @brief This operation detaches an Entity to the WaitSet.<br>
	 * @param[in]  waitset  The waitset to detach the given entity from.<br>
	 * @param[in]  entity   The entity to detach.<br>
	 * @returns   0 - Success (entity attached).<br>
	 * @returns  <0 - Failure (use dds_err_nr() to get error value).<br>
	 * @retval DDS_RETCODE_ERROR<br>
	 *                  An internal error has occurred.<br>
	 * @retval DDS_RETCODE_BAD_PARAMETER<br>
	 *                  The given waitset or entity are not valid.<br>
	 * @retval DDS_RETCODE_ILLEGAL_OPERATION<br>
	 *                  The operation is invoked on an inappropriate object.<br>
	 * @retval DDS_RETCODE_ALREADY_DELETED<br>
	 *                  The waitset has already been deleted.<br>
	 * @retval DDS_RETCODE_PRECONDITION_NOT_MET<br>
	 *                  The entity is not attached.<br>
	 * Original signature : <code>dds_return_t dds_waitset_detach(dds_entity_t, dds_entity_t)</code><br>
	 * <i>native declaration : dds2tmptmp.h:1219</i>
	 */
	public static native DdscLibrary.dds_return_t dds_waitset_detach(DdscLibrary.dds_entity_t waitset, DdscLibrary.dds_entity_t entity);
